drew line and correct spacing

--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 rect{
     fill:white;
     stroke:black;
-    width:80px;
-    height:40px;
 }
 
 path{
